<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ErrorAndResetActivity_your_stored_data_is_out_of_sync_title">WhisperPush has encountered a fatal error.</string>
    <string name="ErrorAndResetActivity_your_stored_data_is_out_of_sync_context">Due to data being out of sync between your device and the server, WhisperPush will need to reset to enable encrypted conversations.</string>
    <string name="ErrorAndResetActivity_your_stored_data_is_out_of_sync_button">Reset</string>
    <string translatable="false" name="generic__plus">+</string>
    <string translatable="false" name="generic__dot">•</string>
    <string name="generic__please_wait">Please wait.</string>
    <string name="GcmReceiver_error">WhisperPush error</string>
    <string name="GcmReceiver_invalid_push_message">Invalid push message</string>
    <string name="GcmReceiver_received_badly_formatted_push_message">Received badly formatted push message.</string>
    <string name="GcmReceiver_unsupported_push_version">Unsupported push version</string>
    <string name="GcmReceiver_received_push_message_with_unknown_version">Received push message with unknown version. Do you need to update your client?</string>
    <string name="MessageNotifier_d_pending_messages_require_validation">%d pending messages require validation</string>
    <string name="MessageNotifier_pending_message_requires_validation">Pending message requires verification.</string>
    <string name="MessageNotifier_you_have_received_a_message_that_requires_you_to_validate_it">You have received a message that requires you to validate it.</string>
    <string name="MessageNotifier_new_session_title">New encrypted SMS</string>
    <string name="MessageNotifier_new_session__incoming_text">You have received a new encrypted SMS message from %s.  All further conversations will be automatically encrypted.</string>
    <string name="MessageNotifier_new_session__view_identity">View identity</string>
    <string name="MessageNotifier_new_session__outgoing_toast">Message to %s was encrypted.</string>
    <string name="MessageNotifier_user_unregistered_from_service_title">WhisperPush unregistered</string>
    <string name="MessageNotifier_user_unregistered_from_service_content">Tap to register WhisperPush and enable encrypted conversations.</string>
    <string name="MessageNotifier_user_received_message_from_blacklisted_number_title">Blocked incoming message</string>
    <string name="MessageNotifier_user_received_message_from_blacklisted_number_content">An encrypted SMS message from %s received. Due to blacklist settings, the message has been blocked.</string>
    <string name="MessageReceiver_unable_to_retrieve_encrypted_attachment_for_incoming_message">Unable to retrieve encrypted attachment for incoming message.</string>
    <string name="MessageReceiver_received_badly_encrypted_message">Received badly encrypted message, or message encrypted for non-existing session.</string>
    <string name="PendingIdentityItemView_received_s">Received %s</string>
    <string name="RegistrationActivity_select_your_country">Select your country</string>
    <string name="RegistrationActivity_you_must_specify_your_country_code">You must specify your country code</string>
    <string name="RegistrationActivity_you_must_specify_your_phone_number">You must specify your phone number</string>
    <string name="RegistrationActivity_invalid_number">Invalid number</string>
    <string name="RegistrationActivity_the_number_you_specified_s_is_invalid">The number you specified (%s) is invalid.</string>
    <string name="RegistrationActivity_unsupported">Unsupported</string>
    <string name="RegistrationActivity_sorry_this_device_is_not_supported_for_data_messaging">Sorry, this device is not supported for data messaging. Devices running versions of Android older than 4.0 must have a registered Google Account. Devices running Android 4.0 or newer do not require a Google Account, but must have the Play Store app installed.</string>
    <string name="RegistrationActivity_we_will_now_verify_that_the_following_number_is_associated_with_your_device_s">We will now verify that the following number is associated with this device:\n\n%s\n\n Is this number correct, or would you like to edit it before continuing?</string>
    <string name="RegistrationActivity_continue">Continue</string>
    <string name="RegistrationActivity_edit">Edit</string>
    <string name="RegistrationActivity_connect_with_textsecure">Connect with TextSecure</string>
    <string name="RegistrationProblemsActivity_possible_problems">Possible problems</string>
    <string name="RegistrationProgressActivity_verifying_number">Verifying number</string>
    <string name="RegistrationProgressActivity_edit_s">Edit %s</string>
    <string name="RegistrationProgressActivity_possible_problems">Possible problems.</string>
    <string name="RegistrationProgressActivity_you_must_enter_the_code_you_received_first">You must enter the code you received first\u2026</string>
    <string name="RegistrationProgressActivity_connecting">Connecting</string>
    <string name="RegistrationProgressActivity_connecting_for_verification">Connecting for verification\u2026</string>
    <string name="RegistrationProgressActivity_network_error">Network error</string>
    <string name="RegistrationProgressActivity_unable_to_connect">Unable to connect. Please check your network connection and try again.</string>
    <string name="RegistrationProgressActivity_verification_failed">Verification failed</string>
    <string name="RegistrationProgressActivity_the_verification_code_you_submitted_is_incorrect">The verification code you submitted is incorrect. Please try again.</string>
    <string name="RegistrationProgressActivity_too_many_attempts">Too many attempts</string>
    <string name="RegistrationProgressActivity_youve_submitted_an_incorrect_verification_code_too_many_times">You\'ve submitted an incorrect verification code too many times. Please wait a minute before trying again.</string>
    <string name="RegistrationProgressActivity_requesting_call">Requesting call\u2026</string>
    <string name="RegistrationProgressActivity_requesting_incoming_call">Requesting incoming verification call\u2026</string>
    <string name="RegistrationProgressActivity_server_error">Server error</string>
    <string name="RegistrationProgressActivity_the_server_encountered_an_error">The server encountered an error. Please try again.</string>
    <string name="RegistrationProgressActivity_too_many_requests">Too many requests</string>
    <string name="RegistrationProgressActivity_youve_already_requested_a_voice_call">You\'ve already recently requested a voice call. You can request another in 20 minutes.</string>
    <string name="RegistrationProgressActivity_verifying_voice_code">Verifying voice code\u2026</string>
    <string name="RegistrationService_registration_complete">Registration complete</string>
    <string name="RegistrationService_push_messaging_registration_has_successfully_completed">Push messaging registration has successfully completed.</string>
    <string name="RegistrationService_registration_error">Registration error</string>
    <string name="RegistrationService_push_messaging_registration_has_encountered_a_problem">Push messaging registration has encountered a problem.</string>
    <string name="SmsServiceBridge_received_encrypted_attachment">Received encrypted attachment, but we can\'t display it because Koush is a slacker.</string>
    <string name="VerifyIdentityActivity_discard_messages">Discard messages?</string>
    <string name="VerifyIdentityActivity_are_you_sure_you_would_like_to_mark_this_identity_fingerprint_as_invalid_and_discard">Are you sure you would like to mark this identity fingerprint as invalid and discard all pending messages associated with it?</string>
    <string name="VerifyIdentityActivity_processing">Processing</string>
    <string name="VerifyIdentityActivity_discarding_messages">Discarding messages\u2026</string>
    <string name="VerifyIdentityActivity_processing_identity_key">Processing identity key\u2026</string>
    <string name="ViewIdentityActivity_verified">Verified</string>
    <string name="ViewIdentityActivity_the_scanned_key_matches">The scanned key matches</string>
    <string name="ViewIdentityActivity_not_verified">Not verified</string>
    <string name="ViewIdentityActivity_warning_the_scanned_key_does_not_match">WARNING, the scanned key does not match</string>
    <string name="ViewIdentityActivity_no_scanned_key_found">No scanned key found</string>
    <string name="country_selection_fragment__search">Search</string>
    <string name="country_selection_fragment__loading_countries">Loading countries\u2026</string>
    <string name="registration_activity__please_confirm_your_country_code_and_phone_number">Please confirm your country code and phone number.</string>
    <string name="registration_activity__your_country">YOUR COUNTRY</string>
    <string name="registration_activity__your_country_code_and_phone_number">YOUR COUNTRY CODE AND PHONE NUMBER</string>
    <string name="registration_activity__phone_number">PHONE NUMBER</string>
    <string name="registration_activity__register">Register</string>
    <string name="registration_activity__privacy_policy"><a href="http://www.cyanogenmod.org/docs/privacy">Privacy policy</a></string>
    <string name="registration_problems__some_possible_problems_include">Some possible problems include:</string>
    <string name="registration_problems__sms_interceptors">SMS Interceptors.</string>
    <string name="registration_problems__some_third_party_text_messaging_clients_such_as_handcent">Some third party text messaging clients, such as Handcent or GoSMS, behave poorly and intercept all incoming SMS messages. Check to see if you received a text message that starts with \'Your TextSecure verification code:\', in which case you\'ll need to configure your third party text messaging app to let text messages through.</string>
    <string name="registration_completed_activity__registration_completed">Registration completed</string>
    <string name="registration_completed_activity__body">You have successfully registered with TextSecure.</string>
    <string name="registration_completed_activity__register_again">Register again</string>
    <string name="verify_identity_activity__this_contacts_identity_fingerprint_has_changed">This contact\'s identity fingerprint has changed, which could mean someone is trying to intercept your communication, or just that your contact has a new phone. Consider calling this contact and validating the fingerprint below by reading it aloud. Messages from this contact will be held until validated.</string>
    <string name="verify_identity_activity__their_fingerprint">Their fingerprint:</string>
    <string name="verify_identity_activity__valid">Valid</string>
    <string name="verify_identity__invalid">Invalid</string>
    <string name="verify_identity_activity__avatar_icon">Avatar icon</string>
    <string name="view_new_identity_activity__verify_fingerprint">This contact has sent you a new encrypted message. Consider calling this contact and validating the fingerprint below by reading it aloud.</string>
    <string name="view_new_identity_activity__continue">Continue</string>
    <string name="pref_registration_category__title">Registration</string>
    <string name="pref_other_category__title">Other</string>
    <string name="pref_register__title">Register</string>
    <string name="pref_register__summary">Register for WhisperPush to enable encrypted SMS</string>
    <string name="pref_unregister__title">Unregister</string>
    <string name="pref_unregister__summary">Unregister from WhisperPush to disable encrypted SMS</string>
    <string name="pref_review_keys__title">Review identity keys</string>
    <string name="pref_my_identity__title">View my identity key</string>
</resources>