<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registration_completed_activity__registration_completed"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:paddingTop="20dip"
        android:paddingBottom="20dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_completed_activity__body"
        android:id="@+id/textView2"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_completed_activity__register_again"
        android:id="@+id/registerAgainButton"
        android:layout_gravity="center"
        android:layout_marginTop="20dip" />
</LinearLayout>