<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <LinearLayout android:paddingRight="16dip"
                  android:paddingLeft="16dip"
                  android:paddingTop="10dip"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView style="@style/Registration.Description"
                  android:layout_width="fill_parent"
                  android:layout_marginBottom="16dip"
                  android:layout_marginTop="16dip"
                  android:text="@string/registration_activity__please_confirm_your_country_code_and_phone_number"/>

        <TextView style="@style/Registration.Label"
                  android:layout_width="fill_parent"
                  android:textAllCaps="true"
                  android:text="@string/registration_activity__your_country" />

        <Spinner android:id="@+id/country_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dip" />

        <TextView style="@style/Registration.Label"
                  android:layout_width="fill_parent"
                  android:textAllCaps="true"
                  android:text="@string/registration_activity__your_country_code_and_phone_number" />

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="20sp"
                      style="@style/Registration.Constant"
                      android:text="@string/generic__plus" />

            <EditText android:id="@+id/country_code"
                      android:layout_width="55dip"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:gravity="center"
                      android:inputType="phone"
                      android:digits="0123456789" />

            <EditText android:id="@+id/number"
                      android:layout_width="0dip"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:inputType="phone"
                      android:hint="@string/registration_activity__phone_number"
                      android:gravity="center"
                      android:singleLine="true"/>

        </LinearLayout>

        <Button android:id="@+id/registerButton"
                android:text="@string/registration_activity__register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="20dip"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:background="@null"
                     android:layout_gravity="center"
                     android:src="@drawable/twilio_powered_by"
                     android:id="@+id/twilio_button" />

        <TextView android:id="@+id/privacy_policy"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginTop="20dip"
                  android:layout_marginBottom="20dip"
                  android:text="@string/registration_activity__privacy_policy"
                  />
    </LinearLayout>
</ScrollView>
